更新网页的一些小细节
-使用 bootstrap 样式框架来使网页更美观
-对于样式代码的修改使得在不同的设备上的兼容性
-增加了一些内部锚点的链接

--- a/index.html
+++ b/index.html
@@ -3,25 +3,39 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>全网Scratch项目版权保护协议-SPCPA</title>
+		<!--样式框架 bootstrap-->
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 		<style type="text/css">
-			#grey{color: gray;font-size: 14px;}.head{text-align: center;}.main{position:absolute;left: 15%;}.foot{position: absolute;top: 200%;}
+			/*有空我一定要改我以前写的寄吧样式表*/
+			.head{
+				text-align: center;
+			}
+			.foot{
+				text-align: center;
+			}
+			a {
+				color: black;
+			}
+			a:hover {
+				color: black;
+			}
 		</style>
 	</head>
 	<body>
 			<div class="head">
 			<h1>Scratch Project Copyright Processing Agreement</h1>
 			<h1>全网Scratch项目版权保护协议-SPCPA</h1>
-			<span id="grey">2021年7月第二版-编号：210702001</span>
+			<span>2021年7月第二版-编号：210702001</span>
 			</div>
 			<hr />
-			<div class="main">
+			<div class="main container">
 			<h2>1，声明</h2>
 			<ul>
-				<li>本协议仅对声明了使用本协议的<strong>原作品</strong><i>（见下文<u>定义</u>）</i>及其<strong>改编作品</strong><i>（见下文<u>定义</u>）</i>适用。</li>
+				<li>本协议仅对声明了使用本协议的<strong>原作品</strong><i>（见下文<a href="#def">定义</a>）</i>及其<strong>改编作品</strong><i>（见下文<a href="#def">定义</a>）</i>适用。</li>
 				<li>本协议只作规范、声明作用，对此协议产生的一切后果（包括违反此协议所产生的后果），需携带本协议联系相关组织以调解。</li>
 				<li>根据本章<u>第1条</u>，在原作品（或其介绍）中标注此协议（及其编号）即可生效。</li>
 			</ul>
-			<h2>2，定义</h2>
+			<h2 id="def">2，定义</h2>
 			<dl>
 				<dt>Scratch</dt>
 				<dd>一款由麻省理工大学（MIT）开发的开源编程工具。</dd>
@@ -68,14 +82,14 @@
 				<li>若原作者改变了协议类型，则应及时通知项目的运行者。</li>
 				<li>当原作者标明使用本协议但没有标明协议类型时，默认使用<strong>OnS</strong>类型。</li>
 				<li>非原作者事先同意，原作品严禁用于任何商业性质（“商业性质”及下文“商业目的”在此指使用法定货币进行任何交易的行为，包括但不限于制作商业广告）用途，并且任何人不得为商业目的运行原作品。</li>
-				<li>改编者在遵守上述要求的情况下有权在改编后的作品中再次使用协议保护改编者及改编后的作品。（详见下文<u>附录</u>）。</li>
+				<li>改编者在遵守上述要求的情况下有权在改编后的作品中再次使用协议保护改编者及改编后的作品。（详见下文<a href="#add">附录</a>）。</li>
 				<li>改编者遵守上述要求的情况下，对于改编后的作品，原作者在其中的版权所占百分比即为该作品与原作品的相似度。</li>
 				<li>当原作者没有遵守要求时，则视原作者违反本协议，改编者/转载者在遵守上述要求的情况下有权制止。</li>
 				<li>当原作者为团体时，上述要求依然有效。</li>
 				<li>任何人在遵守上述要求的情况下，有权自由的运行。（参照<u>本章第18项</u>）</li>
 				<li>当原作者在作品中引用了本协议的，原作品受本协议保护，任何运行此作品人的人即视为阅读并同意此协议（参照<u>本章第17项</u>），一但违反此协议，任何人有权制止。</li>
 			</ul>
-			<h2>4，附录</h2>
+			<h2 id="add">4，附录</h2>
 			<ul>
 				<li>本协议按实际情况调整。但旧版本依然可以使用，具体使用的版本由原作者决定。</li>
 				<li>根据协议第13项，当改编后的作品再次使用了协议时，若改编者开放改编或转载，则改编者与原作者在改编后的作品的协议中都指“原作者”。</li>
@@ -91,7 +105,7 @@
 			</ul>
 		</div>
 		<div class="foot">
-			<span id="grey">网页由红帽RH提供，原保护协议由MarkChai编写。希望您能够支持开源，反对抄袭。</span>
+			<p class="text-secondary">网页由红帽RH提供，原保护协议由MarkChai编写。希望您能够支持开源，反对抄袭。</p>
 		</div>
 	</body>
 </html>
